Header fix-bugs /z-index/alingth-items/  MSh v2

--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -13,10 +13,11 @@
   left: 0;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .icon-logo {
+  display: block;
   color: var(--con-logo);
 }
 .icon-logo-tab {
