--- a/src/css/layout/mobile-menu.css
+++ b/src/css/layout/mobile-menu.css
@@ -9,13 +9,13 @@
   background-color: var(--btn-bgc-default);
   position: fixed;
   top: 0px;
-  z-index: 1;
+  z-index: 100;
   transform: translateX(-100%);
   padding-bottom: 56px;
+  transition: transform var(--transition-set);
 }
 .modal-window.is-open {
   transform: translateY(0);
-  transition: translateY var(--transition-set);
 }
 
 .close-button {
